--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="container">
         <div class="header__menu">
-          <a class="header__home-ic">
+          <a class="header__home-ic" href="#">
             <i class="ic_home"></i>
           </a>
           <nav class="header__nav">
