--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,11 @@
           <div class="hero__inner">
             <div class="hero__benefits">
               <ul class="benefits__list">
-                <li class="benefits__item"><strong>Гарантия от 50</strong> лет на материалы и 5 лет на монтаж</li>
+                <li class="benefits__item"><strong>Гарантия от 50 лет</strong> на материалы и 5 лет на монтаж</li>
                 <li class="benefits__item"><strong>Замер, монтажный проект</strong> и еще 4 услуги бесплатно</li>
                 <li class="benefits__item"><strong>Сметы точны</strong> до копейки</li>
                 <li class="benefits__item"><strong>Поэтапная оплата,</strong> кредит или рассрочка</li>
-                <li class="benefits__item"><strong>Наши крыши вкаждом поселке</strong> и дачном сообществе региона</li>
+                <li class="benefits__item"><strong>Наши крыши в каждом поселке</strong> и дачном сообществе региона</li>
               </ul>
             </div>
             <div class="hero__content">
@@ -85,10 +85,10 @@
               <h2 class="hero__subtitle">и монтаж под ключ</h2>
               <div class="hero__box">
                 <div class="hero__buttons">
-                  <button class="hero__btn">Рассчитать стоимость материалов и монтажа</button>
-                  <button class="hero__btn">записаться на просмотр объектов</button>
-                </div>
-                <p class="hero__text"><b>Ответьте на несколько вопросов и получите</b> сметную стоимость и 3 подарка за экономию нашего времени</p>
+                  <button class="hero__btn">Рассчитать стоимость материалов и монтажа <i class="ic_arrow"></i></button>
+                  <button class="hero__btn">записаться на просмотр объектов <i class="ic_arrow"></i></button>
+                </div><i class="ic_hand"></i>
+                <p class="hero__text"> <b>Ответьте на несколько вопросов и получите</b> сметную стоимость и 3 подарка за экономию нашего времени</p>
               </div>
             </div>
           </div>
