hero and  modal

--- a/app/index.html
+++ b/app/index.html
@@ -36,10 +36,10 @@
               <p class="header__descr-text"><strong>Кровельные и фасадные материалы</strong> в Тюмени и области.</p>
               <p class="header__descr-text">Профессиональный монтаж с 2010 года.</p>
             </div>
-            <div class="header__price">
+            <a class="header__price" href="#">
               <div class="header__price-icon">Pdf</div>
               <p class="header__price-text">Скачать прайс-каталог</p>
-            </div>
+            </a>
             <div class="header__logo">
               <picture>
                 <source srcset="images/logo-mob.png" media="(max-width: 600px)">
@@ -49,20 +49,20 @@
             <div class="header__social">
               <p class="header__social-text">Отвечаем <b>онлайн</b></p>
               <div class="header__social-items">
-                <a class="header__social-item header__social-item--viber">
+                <a class="header__social-item header__social-item--viber" href="https://www.viber.com/ru/" target="_blank">
                   <i class="ic_viber"></i>
                 </a>
-                <a class="header__social-item header__social-item--whatsup">
-                  <i class="ic_whatsup"></i>
+                <a class="header__social-item header__social-item--whatsapp" href="https://www.whatsapp.com/?lang=ru" target="_blank">
+                  <i class="ic_whatsapp"></i>
                 </a>
-                <a class="header__social-item header__social-item--telegram">
+                <a class="header__social-item header__social-item--telegram" href="https://web.telegram.org/k/" target="_blank">
                   <i class="ic_telegram"></i>             
                 </a>
               </div>
             </div>
             <div class="header__contact"><b></b>
               <p class="header__schedule"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</p>
-              <a class="header__tel" href="">8 (800) 222-54-60</a>
+              <a class="header__tel" href="tel:+78002225460">8 (800) 222-54-60</a>
               <button class="header__feedback">Позвоните мне</button>
             </div>
           </div>
@@ -85,10 +85,27 @@
               <h2 class="hero__subtitle">и монтаж под ключ</h2>
               <div class="hero__box">
                 <div class="hero__buttons">
-                  <button class="hero__btn">Рассчитать стоимость материалов и монтажа <i class="ic_arrow"></i></button>
-                  <button class="hero__btn">записаться на просмотр объектов <i class="ic_arrow"></i></button>
-                </div><i class="ic_hand"></i>
-                <p class="hero__text"> <b>Ответьте на несколько вопросов и получите</b> сметную стоимость и 3 подарка за экономию нашего времени</p>
+                  <button class="hero__btn btn--green">
+                    <p>
+                      <span>Рассчитать стоимость</span>
+                      <span>материалов и монтажа</span>
+                    </p>
+                    <i class="ic_arrow"></i>
+                  </button>
+                  <button class="hero__btn btn--orange">
+                    <p>
+                      <span>записаться на</span>
+                      <span>просмотр объектов</span>
+                    </p>
+                    <i class="ic_arrow"></i>
+                  </button>
+                </div>
+                <div class="hero__box-inner">
+                <i class="ic_hand"><i class="path1"><i class="path2"><i class="path3"></i></i></i></i>
+                <p class="hero__text"><b>Ответьте на несколько вопросов и получите</b> сметную стоимость 
+                  и 3 подарка за экономию нашего времени</p>
+                </div>
+
               </div>
             </div>
           </div>
@@ -96,7 +113,39 @@
       </section>
     </div>
   </div>
-  
+
+  <div class="modal">
+    <div class="modal__wrapper">
+      <div class="modal__body">
+        <div class="modal__inner">
+          <div class="modal__close">
+            <i class="ic_close"></i>
+          </div>
+          <h2 class="modal__title"><span>Быстро</span> оставить заявку</h2>
+          <p class="modal__text">Введите номер, мы позвоним вам в течение 10 минут в рабочее время</p>
+          <p class="modal__shedule">Пн–Пт 9:00 - 18:00, Сб 10:00 - 18:00</p>
+          <div class="modal__form">
+            <form class="form" action="">
+              <label class="form__label" for="">Введите номер телефона</label>
+              <input class="form__tel" id="tel" type="tel" placeholder="+7 ( _ _ _) _ _ _ - _ _ - _ _">
+              <button class="form__btn btn--orange" type="submit">
+                <p>Позвоните мне</p>
+                <i class="ic_arrow"></i>
+              </button>
+              <div class="form__inner">
+                <input class="form__checkbox" type="checkbox">
+                <p class="form__disclaimer">
+                  Нажимая кнопку вы соглашаетесь  с условиями 
+                  <a href="#">Политики конфиденциальности</a>
+                </p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/main.min.js"></script>
 </body>
 
