--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -126,19 +126,19 @@
           <p class="modal__shedule">Пн–Пт 9:00 - 18:00, Сб 10:00 - 18:00</p>
           <div class="modal__form">
             <form class="form" action="">
-              <label class="form__label" for="">Введите номер телефона</label>
+              <label class="form__label" for="tel">Введите номер телефона</label>
               <input class="form__tel" id="tel" type="tel" placeholder="+7 ( _ _ _) _ _ _ - _ _ - _ _">
               <button class="form__btn btn--orange" type="submit">
                 <p>Позвоните мне</p>
                 <i class="ic_arrow"></i>
               </button>
-              <div class="form__inner">
-                <input class="form__checkbox" type="checkbox">
-                <p class="form__disclaimer">
+              <!-- <div class="form__inner"> -->
+                <input class="form__checkbox" type="checkbox" id="form__checkbox" checked>
+                <label class="form__disclaimer" for="form__checkbox">
                   Нажимая кнопку вы соглашаетесь  с условиями 
                   <a href="#">Политики конфиденциальности</a>
-                </p>
-              </div>
+                </label>
+              <!-- </div> -->
             </form>
           </div>
         </div>
