--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,28 @@
                 <li class="menu__item"><a class="menu__link" href="#">контакты</a></li>
               </ul>
             </nav>
+            <div class="header__descr"> 
+              <p class="header__descr-text"><strong>Кровельные и фасадные материалы</strong> в Тюмени и области.</p>
+              <p class="header__descr-text">Профессиональный монтаж с 2010 года.</p>
+            </div>
+            <a class="header__price" href="#">
+              <div class="header__price-icon">Pdf</div>
+              <p class="header__price-text">Скачать прайс-каталог</p>
+            </a>
+            <div class="header__social">
+              <p class="header__social-text">Отвечаем <b>онлайн</b></p>
+              <div class="header__social-items">
+                <a class="header__social-item header__social-item--viber" href="https://www.viber.com/ru/" target="_blank">
+                  <i class="ic_viber"></i>
+                </a>
+                <a class="header__social-item header__social-item--whatsapp" href="https://www.whatsapp.com/?lang=ru" target="_blank">
+                  <i class="ic_whatsapp"></i>
+                </a>
+                <a class="header__social-item header__social-item--telegram" href="https://web.telegram.org/k/" target="_blank">
+                  <i class="ic_telegram"></i>             
+                </a>
+              </div>
+            </div>
           </div>
           <div class="header__info">
             <div class="header__descr"> 
@@ -42,7 +64,7 @@
             </a>
             <div class="header__logo">
               <picture>
-                <source srcset="images/logo-mob.png" media="(max-width: 600px)">
+                <source srcset="images/logo-mob.png" media="(max-width: 425px)">
                 <img class="header__img" src="images/logo.png" alt="logo">
               </picture>
             </div>
@@ -60,10 +82,13 @@
                 </a>
               </div>
             </div>
-            <div class="header__contact"><b></b>
+            <div class="header__contact">
               <p class="header__schedule"><b>Пн-Пт</b> 9:00 - 18:00, <b>Сб</b> 10:00 - 18:00</p>
               <a class="header__tel" href="tel:+78002225460">8 (800) 222-54-60</a>
               <button class="header__feedback">Позвоните мне</button>
+            </div>
+            <div class="header__burger">
+              <span></span>
             </div>
           </div>
         </div>
@@ -112,6 +137,7 @@
         </div>
       </section>
     </div>
+    <section class="r"></section>
   </div>
 
   <div class="modal">
@@ -132,13 +158,11 @@
                 <p>Позвоните мне</p>
                 <i class="ic_arrow"></i>
               </button>
-              <!-- <div class="form__inner"> -->
                 <input class="form__checkbox" type="checkbox" id="form__checkbox" checked>
                 <label class="form__disclaimer" for="form__checkbox">
                   Нажимая кнопку вы соглашаетесь  с условиями 
                   <a href="#">Политики конфиденциальности</a>
                 </label>
-              <!-- </div> -->
             </form>
           </div>
         </div>
