--- a/app/index.html
+++ b/app/index.html
@@ -98,12 +98,18 @@
           <div class="hero__inner">
             <div class="hero__benefits">
               <ul class="benefits__list">
-                <li class="benefits__item"><strong>Гарантия от 50 лет</strong> на материалы и 5 лет на монтаж</li>
+                <li class="benefits__item">
+                  <strong>Гарантия от 50 лет</strong> на материалы и 5 лет на монтаж
+                  <p class="benefits__text">Нажмите на плюсик, чтобы увидеть все преимущества работы с нами</p>
+                </li>
                 <li class="benefits__item"><strong>Замер, монтажный проект</strong> и еще 4 услуги бесплатно</li>
                 <li class="benefits__item"><strong>Сметы точны</strong> до копейки</li>
                 <li class="benefits__item"><strong>Поэтапная оплата,</strong> кредит или рассрочка</li>
                 <li class="benefits__item"><strong>Наши крыши в каждом поселке</strong> и дачном сообществе региона</li>
               </ul>
+              <div class="benefits__close">
+                <span></span>
+              </div>
             </div>
             <div class="hero__content">
               <h1 class="hero__title">Продажа <strong>кровельных материалов</strong> в Тюмени и Тюменской области </h1>
