--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             </a>
             <div class="header__logo">
               <picture>
-                <source srcset="images/logo-mob.png" media="(max-width: 425px)">
+                <source srcset="images/logo-mob.png" media="(max-width: 600px)">
                 <img class="header__img" src="images/logo.png" alt="logo">
               </picture>
             </div>
@@ -108,6 +108,7 @@
                 <li class="benefits__item"><strong>Наши крыши в каждом поселке</strong> и дачном сообществе региона</li>
               </ul>
               <div class="benefits__close">
+                <span></span>
                 <span></span>
               </div>
             </div>
