--- a/app/index.html
+++ b/app/index.html
@@ -108,8 +108,11 @@
                 <li class="benefits__item"><strong>Наши крыши в каждом поселке</strong> и дачном сообществе региона</li>
               </ul>
               <div class="benefits__close">
-                <span></span>
-                <span></span>
+                <span class="benefits__close-icon"></span>
+                <span class="benefits__close-icon"></span>
+                <span class="benefits__pulse-ring"></span>
+                <span class="benefits__pulse-ring"></span>
+                <span class="benefits__pulse-ring"></span>
               </div>
             </div>
             <div class="hero__content">
