--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             </a>
             <div class="header__logo">
               <picture>
-                <source srcset="images/logo-mob.png" media="(max-width: 600px)">
+                <!-- <source srcset="images/logo-mob.png"> -->
                 <img class="header__img" src="images/logo.png" alt="logo">
               </picture>
             </div>
